--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "electron": "^29.1.1"
+    "electron": "^29.1.1",
+    "fast-speedtest-api": "^0.3.2",
+    "node-wifi": "^2.0.16",
+    "node-wifi-2.0": "^3.4.0"
   }
 }
