--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "child_process": "^1.0.2",
     "electron": "^29.1.1",
     "fast-speedtest-api": "^0.3.2",
     "node-notifier": "^10.0.1",
